Wider, to avoid depressing wrapping

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -234,7 +234,8 @@
 
 		.afch-label {
 			margin-top: 12px;
-			width: 15%;
+			width: 20%;
+			min-width: 150px;
 		}
 
 		select#lifeStatus.afch-input {
